--- a/Notes/ReleaseNotes.txt
+++ b/Notes/ReleaseNotes.txt
@@ -1,6 +1,10 @@
-Omni Converters & Storage
-- Added search functions to OmniStorage and OmniConverter GUI.
-- Play Mode now lists which mods support a particular mode.
+WBIOmniStorage
+- Added new MAX_AMOUNT_MODIFIER node that can be used to increase the storage capacity of a particular resource. See the new OmniStorageModifiers.cfg file located in Templates/Common for details.
 
 Classic Stock
-- Added new Classic Stock omni converters: Propellium Distiller, Oxium Distiller, Snack Grinder (requres Snacks), Soil Dehydrator (requires Snacks).
+- Fixed issue with OmniConverters incorrectly displaying "missing" status after changing the recipie.
+- OmniConverters will now properly prepare their conversion recipie after you change what they convert.
+- Fixed OPAL Processor not being able to produce Water when the part lacks the Water resource.
+
+Bug Fixes & Enhancements
+- The Ops Manager will again update its button tabs when you change configurations.
